version/stable/_sources/api/ansys/mechanical/stubs/v242/Ansys/ACT/Automation/Mechanical/FE/CDB/ENCommand.rst.txt
.. vale off



:class:`ENCommand`
==================

.. py:class:: ansys.mechanical.stubs.v242.Ansys.ACT.Automation.Mechanical.FE.CDB.ENCommand(iENCommand: Ansys.Common.Interop.FEParsePlugin_ANSYS.IENCommand)

   Bases: :py:obj:`object`


   
   Represents an EN command.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: ENCommand

Overview
--------

.. tab-set::




   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Index`
            - Gets the command index.
          * - :py:attr:`~Name`
            - Gets the command name.
          * - :py:attr:`~Type`
            - Gets the type (attribute or node).
          * - :py:attr:`~Values`
            - Gets the values.







Property detail
---------------
.. py:property:: Index
   :type: Optional[int]


   
   Gets the command index.
















   ..
       !! processed by numpydoc !!

.. py:property:: Name
   :type: Optional[str]


   
   Gets the command name.
















   ..
       !! processed by numpydoc !!

.. py:property:: Type
   :type: Optional[str]


   
   Gets the type (attribute or node).
















   ..
       !! processed by numpydoc !!

.. py:property:: Values
   :type: Optional[tuple[int]]


   
   Gets the values.
















   ..
       !! processed by numpydoc !!







.. vale on